--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
   <head>
     <title></title>
   </head>
+  <body>
+    <table border="0">
+      <tr><td>Daftar Anggota</td></tr>
+      <tr><td>Tidak ada Anggota</td></tr>
+    </table>
+  </body>
 </html>
