--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
+
 <html>
+    
   <head>
-    <title>Utama - Admin</title>
+    <title>Dayat</title>
   </head>
+    
   <body>
-    <table border="0">
-      <tr><td>Daftar Anggota</td></tr>
-      <tr><td>Tidak ada Anggota</td></tr>
-    </table>
+      <h1>Nama saya Dayat...</h1>
   </body>
+
 </html>
