--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <table border="0">
       <tr><td>Daftar Anggota</td></tr>
-      <tr><td>Tidak ada Anggota</td></tr>
+      <tr><td><a href ="alfithra.html">Alfithra Reynaldi</a></td></tr>
     </table>
   </body>
 </html>
