tambah data diri

--- a/septiyadi.html
+++ b/septiyadi.html
@@ -3,6 +3,6 @@
     <title>Septiyadi</title>
   </head>
   <body>
-    <h1>Nama saya: Septiyadi Sistya</h1>
+    <h1>Nama Septiyadi Sistya</h1>
   </body>
 </html>
