ubah index.html

--- a/putra.html
+++ b/putra.html
@@ -5,7 +5,7 @@
   <body>
     <table border="0">
       <tr><td>Daftar Anggota</td></tr>
-      <tr><td><a href="putra.html">Putra Arifah</a> </td></tr>
+      <tr><td>Putra Arifah</td></tr>
     </table>
   </body>
 </html>
