--- a/Mardiana_Safutri.html
+++ b/Mardiana_Safutri.html
@@ -1,11 +1,8 @@
 <html>
   <head>
-    <title>Utama - Admin</title>
+    <title>Admin</title>
   </head>
   <body>
-    <table border="0">
-      <tr><td>Daftar Anggota</td></tr>
-      <tr><td><a href = "MardianaSafutri.html">Mardiana Safutri</a></td></tr>
-    </table>
+    <h1>Mardiana Safutri</h1>
   </body>
 </html>
