halaman login admin dan halaman admin

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="pages/form.html"><span class="glyphicon glyphicon-user">ADDMEMBER</a></li>
         <li><a href="pages/login.html"><span class="glyphicon glyphicon-log-in">LOGIN MEMBER</a></li>
-        <li><a href="pages/admin.html"><span class="glyphicon glyphicon-log-in">LOGIN ADMIN</a></li>
+        <li><a href="pages/adminLogin.html"><span class="glyphicon glyphicon-log-in">LOGIN ADMIN</a></li>
       </ul>
     </div>
   </div>
