--- a/pages/informasi.html
+++ b/pages/informasi.html
@@ -102,7 +102,7 @@
             <br>
             <p>Jika anda hendak melakukan perjalanan dengan memakai angkutan umum L-300, maka anda harus mengutamakan kenyamanan dan keselamatan. Oleh karena itu anda harus mengutamakan kenyamanan dan keselamatan dari sebuah angkutan umum seperti L-300. Bukan hanya melayani transportasi umum, kami juga melayani perjalanan pariwisata serta melayani pengiriman barang. Saat ini L-300 di Aceh sudah memiliki rute untuk transportasi dan pengiriman paket ke seluruh Aceh.</p>
             <br>
-            <h3>Informasi rute perjalanan angkutan umum L-300 :</h3>
+            <h3>Rute perjalanan angkutan umum L-300 :</h3>
             <ul id="double">
                 <li>Banda Aceh</li>
                 <li>Sigli</li>
