rapiin folder dan sedikit perubahan

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <body>
     <table border="0">
         <tr><td>Daftar Anggota</td></tr>
-      	<tr><td><a href ="alfithra.html">Alfithra Reynaldi</a></td></tr>
-      	<tr><td><a href ="Mardiana_Safutri.html">Mardiana Safutri</a></td></tr>
-      	<tr><td><a href ="putra.html">Putra Arifah</a></td></tr>
-      	<tr><td><a href ="dayat.html">Rahmat Hidayat</a></td></tr>
-      	<tr><td><a href ="RayhanYulanda.html">Rayhan Yulanda</a></td></tr>
-        <tr><td><a href="septiyadi.html">Septiyadi</a></td></tr>
+      	<tr><td><a href ="tes/alfithra.html">Alfithra Reynaldi</a></td></tr>
+      	<tr><td><a href ="tes/Mardiana_Safutri.html">Mardiana Safutri</a></td></tr>
+      	<tr><td><a href ="tes/putra.html">Putra Arifah</a></td></tr>
+      	<tr><td><a href ="tes/dayat.html">Rahmat Hidayat</a></td></tr>
+      	<tr><td><a href ="tes/RayhanYulanda.html">Rayhan Yulanda</a></td></tr>
+        <tr><td><a href="tes/septiyadi.html">Septiyadi</a></td></tr>
     </table>
   </body>
 =======
