--- a/pages/form-pemesanantiket.html
+++ b/pages/form-pemesanantiket.html
@@ -54,6 +54,9 @@
   a:hover{
    text-decoration: none;   
   }
+  .formm-group{
+	color: green;
+  }
   </style>
 </head>
 <body>
@@ -132,8 +135,8 @@
                     <option value='22.00 WIB'>22.00 WIB</option>
                     </select>
             </div> 
-            <div class="form-group">
-                <input type="checkbox" class="form-control" name="jumlahtiket" required>Ingin memberitahukan keberadaan diri Anda melalui GPS</input>
+            <div class="formm-group">
+                <input type="checkbox" class="form-control" name="jumlahtiket" required>Ingin memberitahukan keberadaan diri Anda melalui GPS?</input>
             </div>
                           
         </form>
