--- a/informasi_kelas.html
+++ b/informasi_kelas.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="shortcut icon"href="../../image/anti.jpg"/>
+    <link rel="shortcut icon"href="image/anti.jpg"/>
 <head>
   <title>Informasi L-300</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -72,7 +72,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="../index.html"><span class="glyphicon glyphicon-home">L-TICTAL</a>
+      <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-home">L-TICTAL</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -98,31 +98,20 @@
     <center><img src="L-300.jpg" alt="L-300" style="width:728;height:360;"></center>
     <div id="wrapper">
         <div class="container">
-            <center><h1><strong>INFORMASI L-300</strong></h1></center>
-            <br>
-            <p>Jika anda hendak melakukan perjalanan dengan memakai angkutan umum L-300, maka anda harus mengutamakan kenyamanan dan keselamatan. Oleh karena itu anda harus mengutamakan kenyamanan dan keselamatan dari sebuah angkutan umum seperti L-300. Bukan hanya melayani transportasi umum, kami juga melayani perjalanan pariwisata serta melayani pengiriman barang. Saat ini L-300 di Aceh sudah memiliki rute untuk transportasi dan pengiriman paket ke seluruh Aceh.</p>
-            <br>
-            <h3>Informasi rute perjalanan angkutan umum L-300 :</h3>
-            <ul id="double">
-                <li>Banda Aceh</li>
-                <li>Sigli</li>
-                <li>Bireun</li>
-                <li>Lhokseumawe</li>
-                <li>Idi Rayeuk</li>
-                <li>Langsa</li>
-                <li>Kuala Simpang</li>
-                <li>Kutacane</li>
-                <li>Singkil</li>
-                <li>Kotafajar</li>
-                <li>Tapaktuan</li>
-                <li>Labuhan Haji</li>
-                <li>Meulaboh</li>
-                <li>Calang</li>
-                <li>Lamno</li>
-            </ul><br>
+            <h2>Informasi Kelas L-300</h2>
+            <p>Kami juga menyediakan mobil L-300 dengan beberapa kelas, seperti Kelas Bisnis, VIP, Executive dan Super Executive Non-Stop. Berikut informasi tentang beberapa kelas tersebut : </p>
+            <ul>
+                <li>Bisnis : Kelas ini menyediakan mobil yang berkecepatan tinggi, sehingga besar kemungkinan untuk sampai ke tujuan lebih awal. Akan tetapi di kelas bisnis ini kami tidak menyediakan fasilitas AC.</li>
+                <li>VIP : Kelas ini menyediakan mobil yang memiliki fasilitas AC, akan tetapi kecepatan sedikit lebih lambat dari kelas bisnis.</li>
+                <li>Executive : Kelas ini merupakan kelas yang menyediakan fasilitas AC dan berkecepatan tinggi.</li>
+                <li>Super Executive Non-Stop : Kelas ini merupakan kelas tertinggi di angkutan umum L-300. Karena memiliki fasilitas AC dan berkecepatan tinggi. Di tambah lagi dengan Non-Stop di sepanjang jalan.</li>
+            </ul>
+            <p>Dengan adanya beberapa kelas dalam pelayanan angkutan umum L-300, tentunya ada perbedaan harga di setiap kelas dan setiap rute yang di tuju.</p>
         </div>
     </div>
 </div>
+
+
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
