--- a/form.html
+++ b/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="shortcut icon"href="../../image/anti.jpg"/>
+    <link rel="shortcut icon"href="image/anti.jpg"/>
 <head>
   <title>Buat Akun</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="../css/bootstrap.css">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/bootstrap.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap-theme.css">
   <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="../index.html"><span class="glyphicon glyphicon-home">L-TICTAL</a>
+      <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-home">L-TICTAL</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
