--- a/login.html
+++ b/login.html
@@ -92,10 +92,10 @@ body {
 
 <div class="logo"></div>
 <div class="login-block">
-	<form action="index.php" method="POST">
+	<form action="index.html" method="POST">
 		<h1>Login l300</h1>
-		<input type="text" value="" placeholder="ID l300" name="id_l300" id="username"/>
-		<input type="password" value="" placeholder="Password" name="password" id="password"/>
+		<input type="text" value="" placeholder="ID l300" name="id_l300" id="username" required/>
+		<input type="password" value="" placeholder="Password" name="password" id="password"required/>
 		<input type="submit" value="LOGIN" id="login"/>
     </form>
 </div>
