--- a/pages/form-pemesanantiket.html
+++ b/pages/form-pemesanantiket.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <link rel="shortcut icon"href="../../image/anti.jpg"/>
 <head>
-  <title>Buat Akun</title>
+  <title>Form Pemesanan</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/bootstrap.css">
@@ -132,11 +132,15 @@
                     <option value='22.00 WIB'>22.00 WIB</option>
                     </select>
             </div> 
-            <div class="form-group">
-                <input type="checkbox" class="form-control" name="jumlahtiket" required>Ingin memberitahukan keberadaan diri Anda melalui GPS</input>
-            </div>
-                          
+            <div class="checkbox">
+  				<label style="text-align:left; font-size:10pt; color:black"><input type="checkbox" value="">Ingin memberitahukan keberadaan diri Anda melalui GPS</label>
+			</div>
+            <br>
+              <input class="btn btn-primary" type="submit" value="Daftar" id="daftar"/>          
         </form>
+
+
+
             </div>
         </div></div></div></div>
 </div>
