--- a/pages/halaman-penjagaloket_data-calonpenumpang.html
+++ b/pages/halaman-penjagaloket_data-calonpenumpang.html
@@ -99,7 +99,7 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
+                                    <th>No. HP</th>
                                     <th>Nama</th>
                                     <th>Alamat</th>
                                     <th>Tujuan</th>
@@ -110,33 +110,49 @@
                             </thead>
                             <tbody>
                                 <tr> 
-                                    <td>2465</td>
+                                    <td>085234567890</td>
                                     <td>Alfa</td>
                                     <td>Darussalam</td>
                                     <td>Banda Aceh-Meulaboh </td>
                                     <td>14.00 WIB</td>
-                                    <td><a href='#' class='btn btn-success'>Confirm</a>
-                                    <a href='#' class='btn btn-success'>Refuse</a>
+                                    <td><a href='#' class='btn btn-success btn-xs'>Confirm</a>
+                                    <a href='#' class='btn btn-danger btn-xs'>Refuse</a>
                                     </td>
                                     <td><div class="form-group">
-                						<input type="text" class="form-control" placeholder="Keterangan" name="nama" required>
+                						<input style="margin-bottom:-15px" type="text" class="form-control" placeholder="Keterangan" name="nama" required>
             							</div>
-                                        <a href='#' class='btn btn-success'>Kirim</a>
+                                        <a href='#' class='btn btn-success btn-xs'>Kirim</a>
                                         </td>
                                 </tr>
                                 <tr> 
-                                    <td>3484</td>
+                                    <td>081298765432</td>
                                     <td>Beta</td>
                                     <td>Prada</td>
                                     <td>Banda Aceh-Langsa</td>
                                     <td>08.00 WIB</td>
+                                    <td><a href='#' class='btn btn-success btn-xs'>Confirm</a>
+                                    <a href='#' class='btn btn-danger btn-xs'>Refuse</a>
+                                    </td>
+                                    <td><div class="form-group">
+                						<input style="margin-bottom:-15px" type="text" class="form-control" placeholder="Keterangan" name="nama" required>
+            							</div>
+                                        <a href='#' class='btn btn-success btn-xs'>Kirim</a>
+                                        </td>
                                 </tr>
                                 <tr> 
-                                    <td>3094</td>
+                                    <td>082301928374</td>
                                     <td>Charli</td>
                                     <td>Lampineung</td>
                                     <td>Banda Aceh-Calang</td>
                                     <td>19.00 WIB</td>
+                                    <td><a href='#' class='btn btn-success btn-xs'>Confirm</a>
+                                    <a href='#' class='btn btn-danger btn-xs'>Refuse</a>
+                                    </td>
+                                    <td><div class="form-group">
+                						<input style="margin-bottom:-15px" type="text" class="form-control" placeholder="Keterangan" name="nama" required>
+            							</div>
+                                        <a href='#' class='btn btn-success btn-xs'>Kirim</a>
+                                        </td>
                                 </tr>
                             </tbody>
                         </table>
