--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
     <div class="container-fluid bg-1 text-center">
   <h2 class="color: black; margin ">Layanan Pemesanan Tiket L-300 Online L-TICTAL</h2>
   <img src="pages/L-300.jpg" class="img-responsive img-Thumbnail" style="display:inline;" alt="L-300" width="750" height="600">
+        <div class="row" style="margin-top:80px">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3">
+            <a href="#" class="btn btn-success" style="padding:30px; padding-left:50px; padding-right:50px"><p>Pesan</p> <p>Tiket</p></a>
+        </div>
+        <div class="col-sm-3">
+        <a href="#" class="btn btn-success" style="padding-top:30px; padding-bottom:30px"><p>Jadwal</p> <p>Keberangkatan</p></a>
+        </div>
+            </div>
 </div>
 
 
