--- a/index.html
+++ b/index.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
 <html>
   <head>
-<<<<<<< HEAD
-    <title>Utama - Admin</title>
-  </head>
-  <body>
-    <table border="0">
-        <tr><td>Daftar Anggota</td></tr>
-      	<tr><td><a href ="alfithra.html">Alfithra Reynaldi</a></td></tr>
-      	<tr><td><a href ="Mardiana_Safutri.html">Mardiana Safutri</a></td></tr>
-      	<tr><td><a href ="putra.html">Putra Arifah</a></td></tr>
-      	<tr><td><a href ="dayat.html">Rahmat Hidayat</a></td></tr>
-      	<tr><td><a href ="RayhanYulanda.html">Rayhan Yulanda</a></td></tr>
-        <tr><td><a href="septiyadi.html">Septiyadi</a></td></tr>
-    </table>
-  </body>
-=======
     <title>L-TICTAL - Pesan TIket L-300</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,6 +80,15 @@
     <div class="container-fluid bg-1 text-center">
   <h2 class="color: black; margin ">Layanan Pemesanan Tiket L-300 Online L-TICTAL</h2>
   <img src="pages/L-300.jpg" class="img-responsive img-Thumbnail" style="display:inline;" alt="L-300" width="750" height="600">
+        <div class="row" style="margin-top:80px">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3">
+            <a href="#" class="btn btn-success" style="padding:30px; padding-left:50px; padding-right:50px"><p>Pesan</p> <p>Tiket</p></a>
+        </div>
+        <div class="col-sm-3">
+        <a href="#" class="btn btn-success" style="padding-top:30px; padding-bottom:30px"><p>Jadwal</p> <p>Keberangkatan</p></a>
+        </div>
+            </div>
 </div>
 
 
@@ -105,5 +98,4 @@
 </footer>
     
     </body>
->>>>>>> Putra
 </html>
