--- a/about1.html
+++ b/about1.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>L-TickTal</title>
+    <title>About - Business Casual - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -115,7 +115,47 @@
             </div>
         </div>
 
-      
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/fit.jpg" alt="">
+                    <h3>Alfithra Reynaldi</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/mar.jpg" alt="">
+                    <h3>Mardiana Safutri</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/put.jpg" alt="">
+                    <h3>Putra Arifah</h3>
+                </div>
+                <div class="col-lg-12">
+                    <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/day.jpg" alt="">
+                    <h3>Rahmat Hidayat</h3>
+                </div>
+                    <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/ray.jpg" alt="">
+                    <h3>Rayhan Yulanda</h3>
+                </div>
+                    <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/sep.jpg" alt="">
+                    <h3>Septiyadi Sistya</h3>
+                </div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
 
     <footer>
         <div class="container">
