--- a/pengisian-saldo.html
+++ b/pengisian-saldo.html
@@ -85,7 +85,7 @@
 					<center>
 					<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal1">Via Pulsa</button>
 					<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal2">Via E-Banking</button>
-					<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal3">Via ...</button>
+					<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal3">Via Voucher</button>
 					</center>
                 </div>
             </div>
@@ -153,10 +153,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Via ...</h4>
+        <h4 class="modal-title">Via Voucher</h4>
       </div>
       <div class="modal-body">
-        <p>Masukkan nomor ...</p>
+        <p>Masukkan nomor pada kartu</p>
 		<input type="number">
       </div>
       <div class="modal-footer">
