--- a/index.html
+++ b/index.html
@@ -123,33 +123,16 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
+                    <h2 class="intro-text text-center"><strong>L - T i c k T a l</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p style="text-align : justify; text-justify: inter-word;">L-TICKTAL adalah tempat paling tepat untuk memesan tiket online transportasi umum L-300. Anda dapat memesannya dengan cara yang sangat mudah, hanya dengan membuat akun pada website ini dan anda dapat memesan tiket transportasi L-300 dimana saja dan kapan saja. Kami memiliki berbagai pelayan dan bahkan fitur yang tersedia pada website kami ini diamtarannya pelayanan menjemput langsung penumpang pada tempatnya, contoh untuk fitur website ini yaitu terdapat fitur GPS yang memberitahukan keberadaan anda sebagai pemesan tidak, jadi ini akan lebih memudahkan anda sehingga tidak perlu lagi menjelaskan kepada supir seluk beluk tempat anda tinggal.</p>
+                    <p style="text-align : justify; text-justify: inter-word;">L-TICKTAL Pemesanan tikel transportasi L-300 ini tentunya akan sangat membantu anda-anda memberikan solusi dalam masalah pemesanan tiket untuk berpergian Anda. TERIMA KASIAH ATAS KUNJUNGAN ANDA.</p>
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Beautiful boxes
-                        <strong>to showcase your content</strong>
-                    </h2>
-                    <hr>
-                    <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                </div>
-            </div>
-        </div>
-
     </div>
     <!-- /.container -->
 
@@ -157,7 +140,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                     <p>Copyright &copy; L-TickTal 2016</p>
+                    <p>Copyright &copy; L-TickTal 2016</p>
                 </div>
             </div>
         </div>
@@ -171,9 +154,9 @@
 
     <!-- Script to Activate the Carousel -->
     <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
+        $('.carousel').carousel({
+            interval: 5000 //changes the speed
+        })
     </script>
 
 </body>
