Hapus tombol bayar di cancel.html dan perbaikan gambar our team di about.html

--- a/cancel.html
+++ b/cancel.html
@@ -116,9 +116,8 @@
 			<td><h4>Banda Aceh - Abdya</h3></td>
 		</tr>
 		</table>
-            <br>     
-        <a href="send.html" class="btn btn-default btn-lg" role="button"><strong>Bayar</strong></a>
-        <a href="#" class="btn btn-default btn-lg" data-toggle="modal" data-target="#demo-1"><strong>Batal</strong></a></li>
+            <br>
+        <a href="#" class="btn btn-default btn-lg" data-toggle="modal" data-target="#demo-1"><strong>Batalkan Tiket</strong></a></li>
  
     </div>
     <div class="col-sm-4">
