--- a/blog.html
+++ b/blog.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">L-Ticktal</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">L-TickTal</div>
+    <div class="address-bar">Banda Aceh</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -45,6 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
                 <a class="navbar-brand" href="index.html">L-Ticktal</a>
@@ -53,7 +54,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index1.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -63,6 +64,9 @@
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Log Out</a>
                     </li>
                 </ul>
             </div>
