--- a/index1.html
+++ b/index1.html
@@ -44,6 +44,8 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
                 <a class="navbar-brand" href="index.html">L-TickTal</a>
@@ -52,10 +54,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
+                        <a href="index1.html">Home</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="login.html">Log In</a>
+                        <a href="blog.html">Order</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Log Out</a>
                     </li>
                 </ul>
             </div>
