--- a/order1.html
+++ b/order1.html
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index1.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -63,6 +63,9 @@
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Logout</a>
                     </li>
                 </ul>
             </div>
