--- a/regis3.html
+++ b/regis3.html
@@ -89,7 +89,7 @@
 					
 					  <div class="row">
     <div class="col-sm-8">
-      <h2>Data Diri</h2><br>
+      <h2>Data Penumpang</h2><br>
       
 	</br>
 	<table>
@@ -146,7 +146,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Registration Number </h2> <hr>
-                   	<center><h2>Nomor Registrasi Pulsa Electrict Anda</h2></center>
+                   	<center><h2>Nomor Registrasi Pulsa Electric Anda</h2></center>
 					<center><h2>475358345345734</h2></center>
 					<div class="panel-heading"><a href="bayar.html" class="btn btn-default btn-lg">OK</a></div>
   
