update title, tombol daftar di daftar.html, tambah logout di cancel-success.html

--- a/daftar.html
+++ b/daftar.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-       <title>L-TickTal</title>
+       <title>L-TickTal - Daftar</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -142,7 +142,7 @@
 					</tr>
 					<tr>
 					<td height="48"> </td>
-					<td><button><a href="daftar.html">Sign Up</a></button>
+					<td><button><a href="login.html">Sign Up</a></button>
 					<button><a href="index.html">Cancel</a></button></td>
 					</tr>
      
