--- a/bayar.html
+++ b/bayar.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>L-TickTal - Pembayaran</title>
+    <title>L-TickTal - Bukti Bayar</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
