--- a/regis3.html
+++ b/regis3.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 	
-    <title>L-TickTal</title>
+    <title>L-TickTal - Pembayaran</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
